--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2175,6 +2175,10 @@ include ./nord.conf
 tab_bar_style slant
 
 # Keyboard
+map cmd+t new_tab_with_cwd
+map cmd+enter launch --cwd=current
+
+
 map cmd+left neighboring_window left
 map cmd+right neighboring_window right
 map cmd+down neighboring_window down
