vs code and kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2168,8 +2168,10 @@ cursor_blink_interval 0
 
 #: }}}
 
-font_family JetBrainsMonoMedium NF Medium
+#font_family JetBrainsMonoMedium NF Medium
+font_family JetBrainsMonoMediumNerdF-Medium
 font_size 16
+font_features JetBrainsMonoMediumNerdF-Medium +liga -calt
 shell_integration no-cursor
 include ./nord.conf
 tab_bar_style slant
