--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -8,8 +8,8 @@
     "terminal.integrated.fontFamily": "JetBrains Mono Medium",
     "terminal.integrated.fontSize": 16,
     "workbench.startupEditor": "none",
-    "vscode-neovim.neovimExecutablePaths.darwin": "/usr/local/bin/nvim",
     "markdown.preview.fontSize": 16,
+    "editor.cursorBlinking": "solid",
     "editor.rulers": [
         80
     ],
