emacs nano theme

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -20,8 +20,8 @@
     "[elixir]": {
         "editor.defaultFormatter": "JakeBecker.elixir-ls"
     },
-    "workbench.activityBar.visible": false,
     "files.exclude": {
         "**/*.beam": true,
-    }
+    },
+    "workbench.activityBar.visible": false
 }
