--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2190,3 +2190,8 @@ map cmd+opt+down move_window down
 map cmd+opt+up move_window up
 map cmd+opt+right move_window right
 map cmd+opt+left move_window left
+
+# layout
+enabled_layouts splits:split_axis=horizontal
+map f5 launch --location=hsplit
+map f6 launch --location=vsplit
