--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2174,12 +2174,12 @@ font_size 16
 font_features JetBrainsMonoMediumNerdF-Medium +liga -calt
 shell_integration no-cursor
 include ./nord.conf
-tab_bar_style slant
+tab_bar_style powerline
+tab_powerline_style slanted
 
 # Keyboard
 map cmd+t new_tab_with_cwd
 map cmd+enter launch --cwd=current
-
 
 map cmd+left neighboring_window left
 map cmd+right neighboring_window right
@@ -2192,6 +2192,7 @@ map cmd+opt+right move_window right
 map cmd+opt+left move_window left
 
 # layout
+# https://sw.kovidgoyal.net/kitty/layouts/#the-splits-layout
 enabled_layouts splits:split_axis=horizontal
 map f5 launch --location=hsplit
 map f6 launch --location=vsplit
