--- a/tmux.conf
+++ b/tmux.conf
@@ -14,9 +14,9 @@ set -g @dracula-plugins " "
 set -g @dracula-show-powerline true
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.config/tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
 
 # rename window: prefix ,
 # create window: prefix c
 # new window: prefix n
-# previous window: prefix p
+# previous window: prefix p 
