--- a/tmux.conf
+++ b/tmux.conf
@@ -20,3 +20,7 @@ run '~/.tmux/plugins/tpm/tpm'
 # create window: prefix c
 # new window: prefix n
 # previous window: prefix p 
+# prefix $ split the screen in half from left to right
+# prefix " split the screen in half from top to bottom
+# prefix x kill the current pane
+# prefix & kill window
