--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,8 @@ set -g mouse on
 unbind C-b
 set -g prefix C-a
 #bind-key C-a send-prefix
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
