--- a/tmux.conf
+++ b/tmux.conf
@@ -6,10 +6,14 @@ set -g prefix C-a
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+setw -g mode-keys vi
+set-option -s set-clipboard off
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # dracula customizations
 set -g @dracula-plugins " "
