--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,7 @@ set -g prefix C-a
 #bind-key C-a send-prefix
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 setw -g mode-keys vi
 set-option -s set-clipboard off
