disable separators in tmux and nvim

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,7 +18,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 
 # dracula customizations
 set -g @dracula-plugins " "
-set -g @dracula-show-powerline true
+set -g @dracula-show-powerline false
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
