--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,12 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+set -ga terminal-overrides ",xterm-256color:Tc"
+set-environment -g COLORTERM "truecolor"
+
 setw -g mode-keys vi
 set-option -s set-clipboard off
 
