tmux mac ajusts

--- a/tmux.linux.conf
+++ b/tmux.linux.conf
@@ -1,5 +1,11 @@
 source-file ~/dotfiles/tmux.common.conf
 
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+set -ga terminal-overrides ",xterm-256color:Tc"
+set-environment -g COLORTERM "truecolor"
+
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'wl-copy'
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'wl-copy'
 
