Fedora for the win

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -3,12 +3,12 @@
 	"workbench.settings.useSplitJSON": true,
     "editor.minimap.enabled": false,
     "editor.fontSize": 16,
-    "editor.fontFamily": "JetBrains Mono Medium",
+    "editor.fontFamily": "JetBrainsMono Nerd Font",
     "editor.parameterHints.enabled": false,
     "editor.inlayHints.enabled": "off",
     "editor.hover.enabled": true,
-    "workbench.colorTheme": "Dracula",
-    "terminal.integrated.fontFamily": "JetBrains Mono Medium",
+    "workbench.colorTheme": "Dracula Soft",
+    "terminal.integrated.fontFamily": "JetBrainsMono Nerd Font",
     "terminal.integrated.fontSize": 16,
     "workbench.startupEditor": "none",
     "markdown.preview.fontSize": 16,
