--- a/tmux.conf
+++ b/tmux.conf
@@ -1,13 +1,15 @@
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'dracula/tmux'
+# set -g @plugin 'dracula/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'egel/tmux-gruvbox'
 
+# theme
+set -g @tmux-gruvbox 'dark'
 # dracula customizations
-set -g @dracula-plugins " "
-set -g @dracula-show-powerline false
+#set -g @dracula-plugins " "
+#set -g @dracula-show-powerline false
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
