add telescope to nvim minimal

--- a/toolbox/mysql/57/Dockerfile
+++ b/toolbox/mysql/57/Dockerfile
@@ -1,6 +1,7 @@
-FROM mysql:8.0.32-debian
+FROM mysql:5.7.41-debian
 
 RUN apt-get -y update && apt-get -y install zsh curl git
 RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
 
+EXPOSE 3306 33060
 CMD ["mysqld"]
