--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2169,27 +2169,27 @@ cursor_blink_interval 0
 #: }}}
 
 #font_family JetBrainsMonoMedium NF Medium
-font_family JetBrainsMonoMediumNerdF-Medium
-font_size 16
-font_features JetBrainsMonoMediumNerdF-Medium +liga -calt
+font_family BlexMono Nerd Font Medium
+font_size 10.5
+font_features BlexMono Nerd Font Medium +liga -calt
 shell_integration no-cursor
-include ./nord.conf
+include ./gruvbox_dark.conf
 tab_bar_style powerline
 tab_powerline_style slanted
 
 # Keyboard
-map cmd+t new_tab_with_cwd
-map cmd+enter launch --cwd=current
+map ctrl+t new_tab_with_cwd
+map ctrl+enter launch --cwd=current
 
-map cmd+left neighboring_window left
-map cmd+right neighboring_window right
-map cmd+down neighboring_window down
-map cmd+up neighboring_window up
+map ctrl+left neighboring_window left
+map ctrl+right neighboring_window right
+map ctrl+down neighboring_window down
+map ctrl+up neighboring_window up
 
-map cmd+opt+down move_window down
-map cmd+opt+up move_window up
-map cmd+opt+right move_window right
-map cmd+opt+left move_window left
+map ctrl+opt+down move_window down
+map ctrl+opt+up move_window up
+map ctrl+opt+right move_window right
+map ctrl+opt+left move_window left
 
 # layout
 # https://sw.kovidgoyal.net/kitty/layouts/#the-splits-layout
