light theme for kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2173,7 +2173,7 @@ font_family BlexMono Nerd Font Medium
 font_size 10.5
 font_features BlexMono Nerd Font Medium +liga -calt
 shell_integration no-cursor
-include ./gruvbox_dark.conf
+include ./atom.conf
 tab_bar_style powerline
 tab_powerline_style slanted
 
