black color for kitty cursor

--- a/kitty/atom.conf
+++ b/kitty/atom.conf
@@ -1,6 +1,6 @@
 background #f8f8f8
 foreground #2a2b33
-cursor #bbbbbb
+cursor #000000
 selection_background #ececec
 color0 #000000
 color8 #000000
