--- a/tmux.conf
+++ b/tmux.conf
@@ -3,10 +3,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'dracula/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'egel/tmux-gruvbox'
+set -g @plugin 'catppuccin/tmux'
 
 # theme
-set -g @tmux-gruvbox 'dark'
+set -g @catppuccin_flavour 'frappe'
 # dracula customizations
 #set -g @dracula-plugins " "
 #set -g @dracula-show-powerline false
