--- a/toolbox/mysql/docker-compose.yml
+++ b/toolbox/mysql/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "33066:3306"
     environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: yes
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     volumes:
       - toolbox-mysql:/var/lib/mysql
 
