--- a/alacritty/gruvbox.toml
+++ b/alacritty/gruvbox.toml
@@ -8,6 +8,12 @@ background = '#f9f5d7'
 # soft contrast background = = '#f2e5bc'
 foreground = '#3c3836'
 
+[colors.cursor]
+text =  '#f9f5d7'
+cursor = '#3c3836'
+
+
+
 # Normal colors
 [colors.normal]
 black   = '#fbf1c7'
