--- a/alacritty/gruvbox.toml
+++ b/alacritty/gruvbox.toml
@@ -6,11 +6,13 @@
 # background = '#fbf1c7'
 background = '#f9f5d7'
 # soft contrast background = = '#f2e5bc'
-foreground = '#3c3836'
+# foreground = '#3c3836'
+foreground = '#000000'
+
 
 [colors.cursor]
 text =  '#f9f5d7'
-cursor = '#3c3836'
+cursor = '#000000'
 
 
 
