--- a/mac-alacritty/alacritty.toml
+++ b/mac-alacritty/alacritty.toml
@@ -1,6 +1,3 @@
-import = [
-	"~/.config/alacritty/catppuccin-frappe.toml"
-]
 
 # [shell]
 # program = "/bin/zsh"
@@ -20,4 +17,9 @@ bold = {style = "Medium"}
 [keyboard]
 bindings = [
 { key = "F11", action = "ToggleFullscreen" }
+]
+
+[general]
+import = [
+	"~/.config/alacritty/gruvbox.toml"
 ]
