(ghostty): disable font ligatures

--- a/ghostty/config
+++ b/ghostty/config
@@ -3,6 +3,9 @@ font-family = CaskaydiaCove Nerd Font
 font-size = 16
 font-family-bold = GoMono Nerd Font
 font-style-bold = false
+font-feature = -calt
+font-feature = -liga
+font-feature = -dlig
 cursor-style-blink = false
 cursor-style = block
 shell-integration-features = no-cursor
