--- a/alacritty/gruvbox.toml
+++ b/alacritty/gruvbox.toml
@@ -4,11 +4,11 @@
 [colors.primary]
 # hard contrast background = = '#f9f5d7'
 # background = '#fbf1c7'
-# background = '#f9f5d7'
-background = '#ffffea'
+background = '#f9f5d7'
+# background = '#ffffea'
 # soft contrast background = = '#f2e5bc'
-# foreground = '#3c3836'
-foreground = '#000000'
+foreground = '#3c3836'
+# foreground = '#000000'
 
 
 [colors.cursor]
