add nvim, elixir, emmet

--- a/nvim/snippets/package.json
+++ b/nvim/snippets/package.json
@@ -8,6 +8,10 @@
             {
                 "language": "go",
                 "path": "./go.json"
+            },
+            {
+                "language": ["eelixir", "heex", "elixir"],
+                "path": "./eelixir.json"
             }
         ]
     }
