(nvim): add snippet for liveview components

--- a/nvim/snippets/package.json
+++ b/nvim/snippets/package.json
@@ -10,7 +10,7 @@
                 "path": "./go.json"
             },
             {
-                "language": ["eelixir", "heex", "elixir"],
+                "language": ["eelixir", "heex"],
                 "path": "./eelixir.json"
             }
         ]
