(tmux): improve status bar

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,11 +25,12 @@ set-option -g status-interval 1
 
 # git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 # List of plugins
-# set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'grouchoboy/tmux-gruvbox'
+# set -g @plugin 'file:///home/manu/code/tmux-gruvbox'
 set -g @tmux-gruvbox 'light' # or 'kark256', 'light', 'light256'
 
 
@@ -37,3 +38,4 @@ set -g @tmux-gruvbox 'light' # or 'kark256', 'light', 'light256'
 run '~/.tmux/plugins/tpm/tpm'
 
 # reference https://tmuxcheatsheet.com/
+# ctrl+b z zoom pane
