--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,9 @@
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
+unbind C-b
+set-option -g prefix C-d
+
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
