--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -317,6 +317,8 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
+bind = $mainMod ALT, p, exec, grim -g "$(slurp)" - | swappy -f -
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
