--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -54,6 +54,7 @@ $menu = wofi --show drun -W 500
 # exec-once = waybar & hyprpaper & firefox
 exec-once = waybar
 exec-once = hyprpaper
+exec-once = systemctl --user start hyprpolkitagent
 
 
 #############################
@@ -243,8 +244,8 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-# bind = $mainMod, Q, exec, $terminal
 # bind = $mainMod, C, killactive,
+bind = $mainMod, T, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
