more arch and hyprland

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -38,7 +38,7 @@ xwayland {
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = thunar
+$fileManager = dolphin
 $menu = wofi --show drun -W 500
 
 
@@ -99,9 +99,7 @@ general {
     border_size = 2
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    # col.active_border = rgba(181,118,20,1) rgba(181,118,20,1) 45deg
-    # col.active_border = rgba(181,118,20,1)
-    col.active_border = rgb(458588)
+    col.active_border = rgb(babbf1)
     # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
 
@@ -116,7 +114,7 @@ general {
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 0
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
