--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -293,8 +293,8 @@ bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+# bind = $mainMod, mouse_down, workspace, e+1
+# bind = $mainMod, mouse_up, workspace, e-1
 bind = $mainMod CONTROL, left, workspace, e-1
 bind = $mainMod CONTROL, right, workspace, e+1
 
@@ -316,7 +316,8 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-bind = $mainMod ALT, p, exec, grim -g "$(slurp)" - | swappy -f -
+bind = $mainMod SHIFT, p, exec, grim -g "$(slurp)" - | swappy -f -
+bind = $mainMod, L, exec, hyprlock
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
