--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -245,7 +245,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # bind = $mainMod, C, killactive,
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
@@ -317,7 +317,7 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 bind = $mainMod SHIFT, p, exec, grim -g "$(slurp)" - | swappy -f -
-bind = $mainMod, L, exec, hyprlock
+bind = $mainMod SHIFT, L, exec, hyprlock
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
