--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,5 +1,6 @@
 preload = ~/Pictures/wallpapers/chinese-hills.jpg
 preload = ~/Pictures/wallpapers/bird.png
+preload = ~/Pictures/bkg4.png
 
-wallpaper = ,~/Pictures/wallpapers/bird.png
+wallpaper = ,~/Pictures/bkg4.png
 
