--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -55,6 +55,8 @@ $menu = wofi --show drun -W 500
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = systemctl --user start hyprpolkitagent
+exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 
 
 #############################
@@ -247,7 +249,7 @@ bind = $mainMod, T, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+# bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
@@ -318,6 +320,8 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 bind = $mainMod SHIFT, p, exec, grim -g "$(slurp)" - | swappy -f -
 bind = $mainMod SHIFT, L, exec, hyprlock
+bind = $mainMod ALT, P, exec, hyprpicker -a
+bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
