--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -98,7 +98,7 @@ general {
     gaps_in = 5
     gaps_out = 5
 
-    border_size = 2
+    border_size = 4
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgb(babbf1)
@@ -204,11 +204,12 @@ misc {
 
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
-    kb_layout = us
+    kb_layout = us,es
     kb_variant =
     kb_model =
     kb_options =
     kb_rules =
+    kb_options = grp:win_space_toggle
 
     follow_mouse = 1
 
