--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -250,7 +250,7 @@ bind = $mainMod, T, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, E, exec, $fileManager
-# bind = $mainMod, V, togglefloating,
+bind = $mainMod SHIFT, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
