--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -253,6 +253,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod SHIFT, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, M, fullscreen, 1
 # bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
