more arch and hyprland

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -337,6 +337,8 @@ bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-co
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
+windowrule = float, class:blueberry.py
+windowrule = float, class:nm-connection-editor
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
