--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -69,6 +69,7 @@ env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = GDK_SCALE,1.25
 env = QT_QPA_PLATFORMTHEME,qt5ct
+env = XDG_MENU_PREFIX,arch-
 
 ###################
 ### PERMISSIONS ###
@@ -254,17 +255,22 @@ bind = $mainMod SHIFT, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, M, fullscreen, 1
-# bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod SHIFT, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
+# bind = $mainMod, left, movefocus, l
 bind = $mainMod, l, movefocus, l
-bind = $mainMod, right, movefocus, r
+# bind = $mainMod, right, movefocus, r
 bind = $mainMod, h, movefocus, r
-bind = $mainMod, up, movefocus, u
+# bind = $mainMod, up, movefocus, u
 bind = $mainMod, k, movefocus, u
-bind = $mainMod, down, movefocus, d
+# bind = $mainMod, down, movefocus, d
 bind = $mainMod, j, movefocus, d
+
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -321,7 +327,7 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 bind = $mainMod SHIFT, p, exec, grim -g "$(slurp)" - | swappy -f -
-bind = $mainMod SHIFT, L, exec, hyprlock
+bind = $mainMod ALT, L, exec, hyprlock
 bind = $mainMod ALT, P, exec, hyprpicker -a
 bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 
@@ -339,6 +345,7 @@ bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-co
 windowrule = suppressevent maximize, class:.*
 windowrule = float, class:blueberry.py
 windowrule = float, class:nm-connection-editor
+windowrule = float, class:org.kde.gwenview
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
