--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -144,6 +144,7 @@ decoration {
 # https://wiki.hypr.land/Configuring/Variables/#animations
 animations {
     enabled = yes, please :)
+    # enabled = false
 
     # Default animations, see https://wiki.hypr.land/Configuring/Animations/ for more
 
@@ -194,7 +195,7 @@ master {
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = 1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
@@ -212,13 +213,18 @@ input {
     kb_rules =
     kb_options = grp:win_space_toggle
 
-    follow_mouse = 1
+    mouse_refocus = false
+    follow_mouse = 2
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
         natural_scroll = true
     }
+}
+
+cursor {
+    no_warps = true
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#gestures
