--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -69,6 +69,7 @@ env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = GDK_SCALE,1.25
 env = QT_QPA_PLATFORMTHEME,qt5ct
+# https://www.reddit.com/r/kde/comments/1bd313p/dolphin_not_recognizing_file_associations/l1jinyf/
 env = XDG_MENU_PREFIX,arch-
 
 ###################
@@ -349,9 +350,12 @@ bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-co
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
-windowrule = float, class:blueberry.py
+windowrule = size 1073 804,class:blueberry.py
+windowrule = float,class:blueberry.py
 windowrule = float, class:nm-connection-editor
+windowrule = size 1073 804,class:nm-connection-editor
 windowrule = float, class:org.kde.gwenview
+windowrule = size 1073 804,class:org.kde.gwenview
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
