--- a/alacritty/gruvbox.toml
+++ b/alacritty/gruvbox.toml
@@ -2,12 +2,12 @@
 
 # Default colors
 [colors.primary]
+foreground = '#3c3836'
+background = '#f2e5bc' # light soft
+# background = '#f9f5d7 # light hard
 # hard contrast background = = '#f9f5d7'
 # background = '#fbf1c7'
-background = '#f9f5d7'
 # background = '#ffffea'
-# soft contrast background = = '#f2e5bc'
-foreground = '#3c3836'
 # foreground = '#000000'
 
 
