--- a/alacritty/gruvbox.toml
+++ b/alacritty/gruvbox.toml
@@ -3,19 +3,13 @@
 # Default colors
 [colors.primary]
 foreground = '#3c3836'
-background = '#f2e5bc' # light soft
-# background = '#f9f5d7 # light hard
+# background = '#f2e5bc' # light soft
+background = '#f9f5d7' # light hard
 # hard contrast background = = '#f9f5d7'
-# background = '#fbf1c7'
-# background = '#ffffea'
-# foreground = '#000000'
-
 
 [colors.cursor]
 text =  '#f9f5d7'
 cursor = '#000000'
-
-
 
 # Normal colors
 [colors.normal]
