--- a/toolbox/postgres/compose.yml
+++ b/toolbox/postgres/compose.yml
@@ -2,9 +2,9 @@ services:
   db:
     build: .
     ports:
-      - "54321:5432"
+      - "5432:5432"
     environment:
-      POSTGRES_PASSWORD: password
+      POSTGRES_PASSWORD: postgres
     volumes:
       - toolbox-database:/var/lib/postgresql/data
 
