(nvim): emmet, tailwind, ...

--- a/config/nvim/snippets/package.json
+++ b/config/nvim/snippets/package.json
@@ -10,7 +10,7 @@
                 "path": "./go.json"
             },
             {
-                "language": ["eelixir", "heex"],
+                "language": ["eelixir", "heex", "elixir"],
                 "path": "./eelixir.json"
             }
         ]
